# CMakeLists.txt --- CMake project settings
##############################################################################

# CMake minimum version
cmake_minimum_required(VERSION 3.6)

# project name and languages
project(FFshutdown CXX RC)

# FFshutdown.exe
add_executable(FFshutdown FFshutdown.cpp)

##############################################################################
